fix: horizontal overflow issues with chrome

--- a/src/components/index/banner/banner.scss
+++ b/src/components/index/banner/banner.scss
@@ -2,7 +2,7 @@
 @import '/src/styles/general';
 
 #banner {
-	width: 100vw;
+	width: 100%;
 	padding: 0 2rem;
 	display: flex;
 	align-items: center;
